Change rounded border radius from 3em to 1em.

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 
 h1 {
@@ -16,9 +16,9 @@ body {
   margin: 1em;
   background: #fff;
   padding: 1em;
-  -moz-border-radius: 3em;
-  -webkit-border-radius: 3em;
-  border-radius: 3em;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  border-radius: 1em;
 }
 
 p {
