--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
   <head>
     <title>#{@title}</title>
     <meta http-equiv="Content-Script-Type" content="text/javascript" />
@@ -11,14 +12,16 @@
     <meta name="description" content="Description for search engines" />
     <meta name="generator" content="Ramaze #{Ramaze::VERSION}" />
     <meta name="keywords" content="Ramaze, Your own keywords" />
-    <meta name="author" content="Max Mustermann" />
     <meta name="date" content="#{Time.now.iso8601}" />
-    #{css 'screen'}
+    #{ css 'screen' }
+    #{ js 'jquery-1.3.2.min.js' }
   </head>
+
   <body>
     <h1>#{@title}</h1>
     <div id="content">
       #@content
     </div>
   </body>
+
 </html>
