--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -14,7 +14,7 @@
     <meta name="keywords" content="Ramaze, Your own keywords" />
     <meta name="date" content="#{Time.now.iso8601}" />
     #{ css 'screen' }
-    #{ js 'jquery-1.3.2.min.js' }
+    #{ js 'jquery-1.3.2.min' }
   </head>
 
   <body>
