--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -15,6 +15,7 @@
     <meta name="date" content="#{Time.now.iso8601}" />
     #{ css 'screen' }
     #{ js 'jquery-1.3.2.min' }
+    #{ js 'jquery.json-1.3.min' }
   </head>
 
   <body>
