--- a/view/login.xhtml
+++ b/view/login.xhtml
@@ -3,7 +3,7 @@
 <table class="form-layout">
   <tr>
     <td>Username:</td>
-    <td><input type="text" name="username"/></td>
+    <td><input type="text" name="username"/> (or <a href="#{rs( :openid )}">OpenID</a>)</td>
   </tr>
   <tr>
     <td>Password:</td>
