--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -24,9 +24,13 @@
       <div id="main-menu">
         #{ a 'Home', ApplicationName::Controllers::Main.r( :/ ) }
         #{ a 'About', ApplicationName::Controllers::Main.r( :about ) }
-        #{ a 'Register', ApplicationName::Controllers::Main.r( :register ) }
-        #{ a 'Login', ApplicationName::Controllers::Main.r( :login ) }
-        #{ a 'Logout', ApplicationName::Controllers::Main.r( :logout ) }
+        <?r if logged_in? ?>
+          Logged in as #{user}
+          #{ a 'Logout', ApplicationName::Controllers::Main.r( :logout ) }
+        <?r else ?>
+          #{ a 'Register', ApplicationName::Controllers::Main.r( :register ) }
+          #{ a 'Login', ApplicationName::Controllers::Main.r( :login ) }
+        <?r end ?>
       </div>
       #{flashbox}
       #@content
